--- a/backend/env.example
+++ b/backend/env.example
@@ -3,9 +3,8 @@ FLASK_ENV=development
 FLASK_DEBUG=true
 PORT=5000
 
-# API Keys (if needed for other services)
-# ALPHA_VANTAGE_API_KEY=your_api_key_here
-# FINNHUB_API_KEY=your_api_key_here
+# API Keys
+ALPHA_VANTAGE_API_KEY=your_api_key_here
 
 # Cache Configuration
 CACHE_DURATION=300
