--- a/backend/env.example
+++ b/backend/env.example
@@ -3,6 +3,34 @@ FLASK_ENV=development
 FLASK_DEBUG=true
 PORT=5000
 
+# Alpha Vantage API Configuration
+ALPHA_VANTAGE_API_KEY=your_alpha_vantage_api_key_here
+
+# Finnhub API Configuration
+FINNHUB_API_KEY=your_finnhub_api_key_here
+
+# Polygon.io API Configuration
+POLYGON_API_KEY=your_polygon_api_key_here
+
+# PostgreSQL Database Configuration
+DATABASE_URL=postgresql://username:password@localhost:5432/stock_prediction_db
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=stock_prediction_db
+DB_USER=your_postgres_username
+DB_PASSWORD=your_postgres_password
+
+# CORS Configuration
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# Database Connection Pool Configuration
+DB_POOL_SIZE=10
+DB_MAX_OVERFLOW=20
+DB_POOL_TIMEOUT=30
+
+# Data Source Priority (comma-separated: yahoo, finnhub, polygon, alpha_vantage)
+DATA_SOURCE_PRIORITY=yahoo,finnhub,polygon,alpha_vantage
+
 # API Keys
 ALPHA_VANTAGE_API_KEY=your_api_key_here
 
