--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,7 @@ requests>=2.31.0
 python-dotenv>=1.0.0
 gunicorn>=21.2.0
 Werkzeug>=2.3.0
+yfinance>=0.2.18
+psycopg2-binary>=2.9.0
+SQLAlchemy>=2.0.0
+websocket-client>=1.6.0
