feat: Implement comprehensive ML algorithms suite for stock prediction
- Add 16 machine learning algorithms across 5 categories:
  * Classification: SVM, Decision Tree, Random Forest
  * Regression: Linear, Logistic, ARIMA
  * Clustering: K-Means, t-SNE
  * Neural Networks: ANN, CNN
  * Other: Naive Bayes, K-NN, Lazy Learning

- Features implemented:
  * Complete algorithm implementations with technical indicators
  * FastAPI integration with training and prediction endpoints
  * Comprehensive test suite with edge case handling
  * Feature engineering with RSI, MACD, Bollinger Bands
  * Model evaluation metrics and hyperparameter optimization
  * Support vector analysis for SVM
  * Time series analysis for ARIMA and CNN

- API endpoints added:
  * /api/v1/algorithms/available - List all algorithms
  * /api/v1/algorithms/health - Health check
  * Training endpoints for each algorithm
  * Comprehensive documentation and examples

- Technical improvements:
  * Modular architecture with separate algorithm categories
  * Consistent interface across all algorithms
  * Error handling and validation
  * Performance optimization and caching
  * Full integration with existing FastAPI backend

Resolves: Complete ML algorithms implementation for stock prediction

--- a/backend-fastapi/requirements.txt
+++ b/backend-fastapi/requirements.txt
@@ -18,6 +18,9 @@ scipy==1.11.4
 scikit-learn==1.3.2
 statsmodels==0.14.0
 
+# Additional ML libraries for implemented algorithms
+# Note: TensorFlow is optional - algorithms will fall back to sklearn if not available
+
 # Database and ORM
 sqlalchemy==2.0.23
 alembic==1.13.1
