feat: Migrate from Flask to Express.js + FastAPI hybrid architecture
- Replace Flask backend with Express.js for main API operations
- Keep FastAPI for ML algorithms and predictions
- Add comprehensive Express.js backend with routes for:
  - Stock data fetching (Yahoo Finance, Alpha Vantage)
  - ML predictions via FastAPI integration
  - Portfolio analysis
  - News aggregation
  - Health checks
- Add ML service integration between Express.js and FastAPI
- Update frontend to use Express.js backend
- Add comprehensive migration guide
- Maintain all existing functionality with better separation of concerns

Architecture:
- Express.js (Port 5000): Business logic, data fetching, API endpoints
- FastAPI (Port 8000): ML algorithms, predictions, model training
- Frontend (Port 3000): Next.js/React (unchanged)

Benefits:
- Better performance with Express.js
- Superior ML capabilities with Python/FastAPI
- Improved scalability and maintainability
- No script dependencies - simple manual startup

--- a/backend-node/env.example
+++ b/backend-node/env.example
@@ -10,6 +10,9 @@ DB_USER=postgres
 DB_PASSWORD=your_password_here
 DB_URL=postgresql://postgres:your_password_here@localhost:5432/stock_prediction
 
+# ML Service Configuration
+ML_SERVICE_URL=http://localhost:8000
+
 # API Keys
 ALPHA_VANTAGE_API_KEY=your_alpha_vantage_api_key_here
 FINNHUB_API_KEY=your_finnhub_api_key_here
