--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -32,7 +32,8 @@
     "csv-parser": "^3.0.0",
     "moment": "^2.29.4",
     "mathjs": "^11.11.0",
-    "technicalindicators": "^3.1.0"
+    "technicalindicators": "^3.1.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
