feat: Remove authentication - all features accessible without login
- Remove JWT, bcryptjs dependencies
- Remove authentication-related environment variables
- Remove JWT error handling from middleware
- Disable CORS credentials (no auth needed)
- Replace Winston logging with simple console logging
- All API endpoints now accessible without authentication
- Users can access all features without logging in

--- a/backend-node/env.example
+++ b/backend-node/env.example
@@ -18,9 +18,7 @@ ALPHA_VANTAGE_API_KEY=your_alpha_vantage_api_key_here
 FINNHUB_API_KEY=your_finnhub_api_key_here
 POLYGON_API_KEY=your_polygon_api_key_here
 
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_here
-JWT_EXPIRES_IN=24h
+# Authentication disabled - all features accessible without login
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
@@ -33,5 +31,4 @@ CORS_ORIGIN=http://localhost:3000
 CACHE_TTL=300
 REDIS_URL=redis://localhost:6379
 
-# Logging
-LOG_LEVEL=info
+# Logging (simple console logging only)
