--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -26,14 +26,11 @@
     "compression": "^1.7.4",
     "express-rate-limit": "^7.1.5",
     "joi": "^17.11.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "csv-parser": "^3.0.0",
     "moment": "^2.29.4",
     "mathjs": "^11.11.0",
-    "technicalindicators": "^3.1.0",
-    "winston": "^3.11.0"
+    "technicalindicators": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
